--- a/config.json
+++ b/config.json
@@ -13,9 +13,9 @@
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
   "nickNameBot": "GoatBot",
-  "prefix": "-",
+  "prefix": "*",
   "api": "https://www.noobs-api.rf.gd/dipto",
-  "approval": false,
+  "approval": true,
   "reactBy": {
     "delete": [
       "😡",
@@ -31,16 +31,16 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "61552258402755"
+    "61578130127315"
   ],
   "mainAdmin": [
-    "61552258402755"
+    "61578130127315"
   ],
   "whiteListMode": {
     "enable": true,
     "whiteListIds": [
-      "61552258402755",
-      "100044327656712"
+      "61578130127315",
+      "61578130127315"
     ],
     "notes": "if you enable this feature, only the ids in the whiteListIds list can use the bot"
   },
